[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
object = { version = "0.36.3", default-features = false, features = ["std", "read", "macho"] }
libc = "0.2.155"
rand = "0.8.5"
rsa = "0.9.6"

[build-dependencies]
cc = "1.0"

[profile.dev.package.num-bigint-dig]
opt-level = 3
